--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -19,7 +19,7 @@ $gradient: linear-gradient(to bottom, rgb(1, 194, 178), rgb(100, 100, 100));
 
             &:after {
                 content: ' ';
-                position: absolute;
+                position: fixed;
                 top: 0;
                 right: 0;
                 width: 100%;
@@ -46,5 +46,30 @@ $gradient: linear-gradient(to bottom, rgb(1, 194, 178), rgb(100, 100, 100));
 
     @else {
         @return #fff;
+    }
+}
+
+
+@mixin mediaSm {
+    @media screen and (max-width: 500px) {
+        @content;
+    }
+}
+
+@mixin mediaMd {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin mediaLg {
+    @media screen and (min-width: 769px) and (max-width: 1170px) {
+        @content;
+    }
+}
+
+@mixin mediaXl {
+    @media screen and (min-width: 1171px) {
+        @content;
     }
 }
