trying some things for the millionth time for gh page

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #333;
 $secondary-color: #06e6e6;
 $show-home-image: true;
-$background-image: url(/dist/images/cursors.jpg);
+$background-image: url(/images/cursors.jpg);
 $gradient: linear-gradient(to bottom, rgb(1, 194, 178), rgb(100, 100, 100));
 
 
